Fix the filter menu, the chevron z-index and the opacity of the filters.

--- a/styles/components/projects.css
+++ b/styles/components/projects.css
@@ -13,6 +13,7 @@
   color: var(--secundary);
   font-size: 10px;
   margin-left: 10px;
+  z-index: 100;
 }
 
 #projects_tooltip {
@@ -64,7 +65,8 @@
 .filter_bar {
   display: none;
   position: absolute;
-  left: 100px;
+  top: 8%;
+  left: 20%;
   width: 200px;
   height: auto;
   flex-direction: column;
@@ -77,6 +79,7 @@
 
 .filter_bar a {
   text-decoration: none;
+  opacity: unset;
   font-family: var(--header);
   color: var(--primary);
   font-size: 16px;
@@ -89,8 +92,17 @@
 
 #projects_container {
   display: grid;
+  grid-template-columns: 1fr;
+  gap: 12px;
+  place-items: center;
   height: 80%;
   margin-top: 45px;
+}
+
+@media (min-width: 355px) {
+  #projects_container {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 #projects_container img {
